# Final_work

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
board/: models.py  paginations.py  serializers.py  tests.py  urls.py  views.py
board/migrations/: 0001_initial.py
config/: settings.py  urls.py
users/: admin.py  managers.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_managers.py
