[tool.poetry]
name = "diplom-work"
version = "0.1.0"
description = ""
authors = ["Bloodimirg <bloodimirg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-filter = "^24.3"
coverage = "^7.6.4"
django-cors-headers = "^4.6.0"
drf-yasg = "^1.21.8"
pillow = "^11.0.0"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
